move native dependency to peer

--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "android"
   ],
   "dependencies": {
-    "@react-native-picker/picker": "^1.9.8",
     "google-libphonenumber": "^3.2.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10"
   },
   "peerDependencies": {
-    "react-native": ">= 0.62"
+    "react-native": ">= 0.62",
+    "@react-native-picker/picker": "^1.9.8"
   },
   "author": "Watcharachai Kanjaikaew (https://github.com/thegamenicorus)",
   "license": "MIT",
